environments/dev/apps/discussion-csr-kustomization/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discussion-csr-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: discussion-csr.development.wapps.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: discussion-csr-service
            port:
              number: 80
